# halo

./: .gitignore  BOOT.md  CMakeLists.txt  LICENSE  MACOS.md  NUCLEO.md  README.md  arm-none-eabi-cxx.cmake  f429-flash.cfg  stm32f429.ld
hardware/: MULTIFUNCTION_SHIELD.md
src/: halo.hpp  helpers.hpp  main.c  main.cpp  mfs.cpp  mfs.hpp  startup.s
